# exclosured

./: .gitignore  CHANGELOG.md  DEVELOPER.md  README.md  mix.exs
.github/workflows/: ci.yml
examples/brotli_compress/: mix.exs
examples/canvas_demo/: README.md  mix.exs
examples/confidential_compute/: README.md  mix.exs
examples/kino_exclosured/: .gitignore  README.md  mix.exs  notebook.livemd
examples/latency_compare/: README.md  mix.exs
examples/live_svelte_wasm/: .gitignore  README.md  mix.exs
examples/live_vue_wasm/: .gitignore  README.md  mix.exs
examples/matrix_mul/: mix.exs
examples/offload_compute/: README.md  mix.exs
examples/private_analytics/: .gitignore  README.md  mix.exs
examples/private_analytics/native/wasm/private_analytics_wasm/: Cargo.toml
examples/private_analytics/native/wasm/private_analytics_wasm/src/: lib.rs
examples/private_analytics/native/wasm/rust_hook/: Cargo.toml
examples/private_analytics/native/wasm/rust_hook/src/: column_profiler.rs  data_processor.rs  histogram.rs  lib.rs  pii_engine.rs  sql_editor.rs  table_renderer.rs
examples/racing_game/: README.md  mix.exs
examples/realtime_sync/: README.md  mix.exs
examples/streaming_demo/: README.md  mix.exs
examples/sync_demo/: README.md  mix.exs
examples/typed_events/: .gitignore  README.md  mix.exs
examples/wasm_ai/: README.md  mix.exs
lib/: exclosured.ex
lib/exclosured/: compiler.ex  config.ex  events.ex  inline.ex  live_view.ex  manifest.ex  (+3 more)
native/exclosured_guest/: Cargo.toml  README.md
native/exclosured_guest/src/: lib.rs
npm/: index.d.ts  index.js  index.mjs  loader.js  loader.mjs  package.json
test/: exclosured_test.exs
(+226 files in other folders)
