[package]
name = "exclosured_guest"
version = "0.1.1"
edition = "2021"
description = "Guest-side helpers for Exclosured WASM modules. Provides emit/broadcast for LiveView communication and alloc/dealloc for memory management."
license = "MIT"
repository = "https://github.com/cocoa-xu/exclosured"
homepage = "https://github.com/cocoa-xu/exclosured"
keywords = ["wasm", "webassembly", "phoenix", "liveview", "elixir"]
categories = ["wasm", "web-programming"]
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = "0.2"
