[package]
name = "private_analytics_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
exclosured_guest = { path = "../../../../../native/exclosured_guest" }
aes-gcm = "0.10"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
serde_json = "1"
