[package]
name = "rust_hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
web-sys = { version = "0.3", features = [
  "HtmlElement",
  "HtmlTextAreaElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlInputElement",
  "Element",
  "Document",
  "Window",
  "Event",
  "InputEvent",
  "KeyboardEvent",
  "Node",
  "NodeList",
  "CssStyleDeclaration",
] }
